--- a/glide.html
+++ b/glide.html
@@ -7,35 +7,15 @@
   <style>
     html,body{height:100%;margin:0;padding:0;font-family:'Segoe UI',Arial,sans-serif;background:#16171A;}
     body{color:#EAEAEA;}
-    /* --- TRIPLE HERO VIDEO --- */
-    #triple-hero-bg {
-      position:fixed; left:0; top:0; width:100vw; height:100vh; z-index:0; background:#000;
-      pointer-events:none;
-      overflow:hidden; display:flex; align-items:center; justify-content:center;
-    }
-    .triple-vid-bg {
-      position:absolute;top:0;left:0;width:100vw;height:100vh;
-      display:flex;justify-content:center;align-items:center;will-change:transform;
-      transition:filter .7s,transform 1.3s cubic-bezier(.7,0,.2,1);
-    }
-    .hero-vid {
-      object-fit:cover;border-radius:2vw;box-shadow:0 6px 36px #0008;
-      width:33.34vw;min-width:320px;max-width:600px;aspect-ratio:16/9;
-      height:70vh;min-height:120px;max-height:90vh;opacity:.21;
-      transition:opacity .7s,box-shadow .7s;margin:0 1vw;pointer-events:none!important;
-    }
+    #triple-hero-bg{position:fixed; left:0; top:0; width:100vw; height:100vh; z-index:0; background:#000; pointer-events:none; overflow:hidden; display:flex; align-items:center; justify-content:center;}
+    .triple-vid-bg{position:absolute;top:0;left:0;width:100vw;height:100vh;display:flex;justify-content:center;align-items:center;will-change:transform;transition:filter .7s,transform 1.3s cubic-bezier(.7,0,.2,1);}
+    .hero-vid{object-fit:cover;border-radius:2vw;box-shadow:0 6px 36px #0008;width:33.34vw;min-width:320px;max-width:600px;aspect-ratio:16/9;height:70vh;min-height:120px;max-height:90vh;opacity:.21;transition:opacity .7s,box-shadow .7s;margin:0 1vw;pointer-events:none!important;}
     .center-vid {z-index:2;opacity:1;}
-    .hero-overlay,.hero-ad-bottom{
-      position:absolute;width:100vw;left:0;text-align:center;z-index:3;
-      font-weight:bold;letter-spacing:.01em;pointer-events:none;user-select:none;
-      text-shadow:0 4px 32px #000a,0 1px 8px #222b;
-      transition:opacity .82s,top 1s,bottom 1s,font-size .8s;color:#fff;
-    }
+    .hero-overlay,.hero-ad-bottom{position:absolute;width:100vw;left:0;text-align:center;z-index:3;font-weight:bold;letter-spacing:.01em;pointer-events:none;user-select:none;text-shadow:0 4px 32px #000a,0 1px 8px #222b;transition:opacity .82s,top 1s,bottom 1s,font-size .8s;color:#fff;}
     .hero-overlay{top:21vh;font-size:2.3rem;}
     .hero-ad-bottom{bottom:9vh;color:#ffae1a;font-size:1.38rem;opacity:0;}
     .down-arrow{position:absolute;left:50%;bottom:2vh;width:40px;margin-left:-20px;z-index:10;opacity:.7;animation:arrow-bounce 1.7s infinite;pointer-events:none;}
     @keyframes arrow-bounce{0%,100%{transform:translateY(0);}50%{transform:translateY(22px);}}
-
     .scrolled-hero .triple-vid-bg{transform:scale(1) translateY(0);}
     .zoom-hero .triple-vid-bg{transform:scale(2.3) translateY(0);}
     .zoom-hero .hero-vid{opacity:.08;box-shadow:0 0 0 transparent;}
@@ -44,19 +24,22 @@
     .zoom-hero .hero-ad-bottom{opacity:0;}
     .scrolled-hero .hero-overlay{opacity:0;}
     .scrolled-hero .hero-ad-bottom{opacity:1;}
-    .triple-vid-bg{transition:transform 1.33s cubic-bezier(.7,0,.2,1),filter .82s;}
-    .scrolled-hero .hero-vid,.zoom-hero .hero-vid{transition:opacity 1.3s,box-shadow 1.1s;}
-    @media (max-width:900px){.hero-vid{min-width:120px;min-height:60px;width:99vw;height:25vh;border-radius:4vw;}
-      .hero-overlay{font-size:1.17rem;top:10vh;}
-      .hero-ad-bottom{font-size:.98rem;}
-    }
-    @media (max-width:600px){
-      .hero-vid{min-width:90px;width:98vw;height:13vh;}
-      .hero-overlay{font-size:1.01rem;}
-      .hero-ad-bottom{font-size:.97rem;}
-    }
-    /* --- MAIN CONTENT --- */
-    .main {max-width:700px;margin:0 auto 32px auto;padding:46px 18px 14px 18px;background:#23242bdd;border-radius:14px;box-shadow:0 4px 24px #0007;position:relative;z-index:2;margin-top:110vh;}
+    @media (max-width:900px){.hero-vid{min-width:120px;min-height:60px;width:99vw;height:25vh;border-radius:4vw;}.hero-overlay{font-size:1.17rem;top:10vh;}.hero-ad-bottom{font-size:.98rem;}}
+    @media (max-width:600px){.hero-vid{min-width:90px;width:98vw;height:13vh;}.hero-overlay{font-size:1.01rem;}.hero-ad-bottom{font-size:.97rem;}}
+
+    .glide-ad-section {max-width:880px;margin:0 auto 0 auto;padding-top:80px;text-align:center;z-index:2;position:relative;display:none;}
+    .glide-ad-section.visible { display:block; animation: fadein 1.1s;}
+    @keyframes fadein { from{ opacity:0;} to{opacity:1;} }
+    .ad-overlay-block { margin-bottom: 44px;}
+    .top-ad-line { color: #77ff77; font-size: 1.3rem; font-weight: bold; letter-spacing: 0.04em; margin-bottom: 8px;}
+    .main-ad-headline { font-size: 2.15rem; font-weight: bold; color: #fff; margin-bottom: 9px; line-height: 1.2;}
+    .bottom-ad-line { color: #ff6060; font-size: 1.14rem; margin-bottom: 4px; font-weight: bold; letter-spacing: 0.03em;}
+    .glide-images-outer { width: 100%; margin: 0 auto 6px auto; display: flex; flex-direction: column; gap:16px;}
+    .glide-image-row { width: 100%; display: flex; align-items: center; overflow: hidden; border-radius: 14px; margin-bottom: 6px; position:relative; height: 118px; background: #161920; box-shadow: 0 4px 18px #0005;}
+    .glide-image-row img { height:100px; width:auto; min-width:210px; margin-right: 14px; border-radius:12px; opacity:0.97; background:#212227;}
+    @media(max-width:850px){.glide-ad-section {max-width:98vw;padding-left:2vw;padding-right:2vw;}.main-ad-headline{font-size:1.25rem;}.glide-image-row{height:64px;}.glide-image-row img {height:52px; min-width:135px;}}
+
+    .main {max-width:700px;margin:0 auto 32px auto;padding:46px 18px 14px 18px;background:#23242bdd;border-radius:14px;box-shadow:0 4px 24px #0007;position:relative;z-index:2;margin-top:60px;}
     h1{font-size:2.1rem;margin-bottom:10px;color:#ffae1a;font-weight:bold;text-shadow:0 2px 6px #0005;}
     h2{font-size:1.25rem;color:#f05e16;margin:16px 0 12px 0;}
     .features{font-size:1.08rem;margin:12px 0 18px 0;padding-left:15px;}
@@ -67,7 +50,6 @@
     .price{font-size:1.06rem;color:#ffd15c;margin-top:8px;}
     .video-wrap{margin:25px auto 16px auto;max-width:560px;width:100%;border-radius:10px;overflow:hidden;box-shadow:0 1.5px 10px #000a;background:#23242bdd;aspect-ratio:16/9;position:relative;}
     .video-wrap iframe{width:100%;height:100%;border:none;display:block;}
-    /* FAQ + Pros/Cons style: collapsible */
     .faq-section{max-width:600px;margin:40px auto 0 auto;border-radius:12px;background:#212227ee;box-shadow:0 2px 16px #0005;padding:20px 15px;}
     .faq-title{color:#ffaa44;font-size:1.14rem;margin:0 0 14px 0;padding-left:8px;}
     .faq-list{}
@@ -87,20 +69,28 @@
   </style>
 </head>
 <body>
-<!-- TRIPLE HERO VIDEO -->
 <div id="triple-hero-bg" class="zoom-hero">
   <div class="triple-vid-bg" id="tripleVidBg">
     <video class="hero-vid left-vid" src="bg1.mp4" autoplay muted loop playsinline></video>
     <video class="hero-vid center-vid" src="bg2.mp4" autoplay muted loop playsinline></video>
     <video class="hero-vid right-vid" src="bg3.mp4" autoplay muted loop playsinline></video>
   </div>
-  <div class="hero-overlay" id="mainAd">Hammer Steam Library Adder<br>
-    <span style="font-size:1.3rem;font-weight:400;">Unlock and unleash your Steam</span>
-  </div>
+  <div class="hero-overlay" id="mainAd">Hammer Steam Library Adder<br><span style="font-size:1.3rem;font-weight:400;">Unlock and unleash your Steam</span></div>
   <div class="hero-ad-bottom" id="lowerAd">Massive <b>75,000 games</b> and titles in your arsenal</div>
   <svg class="down-arrow" viewBox="0 0 24 24" fill="none"><path d="M12 20V4M12 20l7-7m-7 7l-7-7" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
 </div>
-
+<section class="glide-ad-section" id="glideAdSection">
+  <div class="ad-overlay-block">
+    <div class="top-ad-line">🎮 Unlock 75,000+ Games Instantly! 🚀</div>
+    <div class="main-ad-headline">Play Your Way. Your Account. No Limits.</div>
+    <div class="bottom-ad-line">✅ Access a Massive Library – Over <b>75,000</b> Steam Games!</div>
+  </div>
+  <div class="glide-images-outer">
+    <div class="glide-image-row" id="glider1"><img src="1.avif" alt=""><img src="1.avif" alt=""></div>
+    <div class="glide-image-row" id="glider2"><img src="2.avif" alt=""><img src="2.avif" alt=""></div>
+    <div class="glide-image-row" id="glider3"><img src="3.avif" alt=""><img src="3.avif" alt=""></div>
+  </div>
+</section>
 <div class="main">
   <h1>🚀🔥 Hammer App</h1>
   <h2>Unlock Your Entire Steam Library in One Click!</h2>
@@ -121,114 +111,96 @@
     <div class="price"><b>Just PHP 699 / \$13!</b></div>
     <div style="font-size:1.04rem; margin-top:6px; color:#aaffbc;">No more waiting, no more limits!</div>
   </div>
-  <!-- STREAMABLE VIDEO PLAYER -->
   <div class="video-wrap"><iframe src="https://streamable.com/e/i3nad1" allowfullscreen></iframe></div>
-
-  <!-- FAQ Section - COLLAPSIBLE -->
-  <div class="faq-section">
-    <h2 class="faq-title">❓ Frequently Asked Questions</h2>
+  <div class="faq-section"><h2 class="faq-title">❓ Frequently Asked Questions</h2>
     <div class="faq-list">
-      <div class="faq-item"><button class="faq-q">Is Hammer App safe and legal?</button>
-        <div class="faq-a">Absolutely! Hammer downloads directly from Valve’s servers using your Steam credentials. There’s no piracy, no server spoofing, and your login info never goes to us!</div>
-      </div>
-      <div class="faq-item"><button class="faq-q">Will my Steam achievements and saves work?</button>
-        <div class="faq-a">Yes—Hammer fully supports Steam Cloud and achievements. Everything stays synced and up-to-date.</div>
-      </div>
-      <div class="faq-item"><button class="faq-q">Can I use Hammer App anywhere?</button>
-        <div class="faq-a">Yes, there are no region locks! Play and restore games worldwide.</div>
-      </div>
-      <div class="faq-item"><button class="faq-q">What platforms are supported?</button>
-        <div class="faq-a">Hammer runs on Windows, Steam Deck, ROG Ally, MSI Claw, Legion Go, and more. There’s also an Android companion app.</div>
-      </div>
-      <div class="faq-item"><button class="faq-q">Do I need a subscription?</button>
-        <div class="faq-a">No subscription needed! Just a one-time payment of PHP 699 or \$13.</div>
-      </div>
-      <div class="faq-item"><button class="faq-q">Can I add games while on mobile?</button>
-        <div class="faq-a">Yes! The Android app lets you add games on the go, and the upcoming Chrome extension will let you add games in 1 click from the Steam store.</div>
-      </div>
+      <div class="faq-item"><button class="faq-q">Is Hammer App safe and legal?</button><div class="faq-a">Absolutely! Hammer downloads directly from Valve’s servers using your Steam credentials. There’s no piracy, no server spoofing, and your login info never goes to us!</div></div>
+      <div class="faq-item"><button class="faq-q">Will my Steam achievements and saves work?</button><div class="faq-a">Yes—Hammer fully supports Steam Cloud and achievements. Everything stays synced and up-to-date.</div></div>
+      <div class="faq-item"><button class="faq-q">Can I use Hammer App anywhere?</button><div class="faq-a">Yes, there are no region locks! Play and restore games worldwide.</div></div>
+      <div class="faq-item"><button class="faq-q">What platforms are supported?</button><div class="faq-a">Hammer runs on Windows, Steam Deck, ROG Ally, MSI Claw, Legion Go, and more. There’s also an Android companion app.</div></div>
+      <div class="faq-item"><button class="faq-q">Do I need a subscription?</button><div class="faq-a">No subscription needed! Just a one-time payment of PHP 699 or \$13.</div></div>
+      <div class="faq-item"><button class="faq-q">Can I add games while on mobile?</button><div class="faq-a">Yes! The Android app lets you add games on the go, and the upcoming Chrome extension will let you add games in 1 click from the Steam store.</div></div>
     </div>
   </div>
-  <!-- Pros and Cons Section - COLLAPSIBLE -->
-  <div class="faq-section" style="margin-top:36px;">
-    <h2 class="faq-title">✨ Pros & Cons</h2>
+  <div class="faq-section" style="margin-top:36px;"><h2 class="faq-title">✨ Pros & Cons</h2>
     <div class="faq-list">
-      <div class="faq-item"><button class="faq-q">Show Pros</button>
-        <div class="faq-a">
-          <ul class="pros">
-            <li>✔️ Huge library (75,000+ games, including delisted gems)</li>
-            <li>✔️ No region locks, play anywhere</li>
-            <li>✔️ Fast downloads via Valve's servers</li>
-            <li>✔️ Always up to date with 1 click</li>
-            <li>✔️ Steam Cloud support (saves & achievements stay intact)</li>
-            <li>✔️ Revives classics and lost titles</li>
-            <li>✔️ Multi-platform (Windows, Steam Deck, ROG Ally, etc.)</li>
-            <li>✔️ Mobile companion app + upcoming Chrome extension</li>
-            <li>✔️ Easy, no account needed</li>
-            <li>✔️ One-time price, no subscriptions</li>
-          </ul>
-        </div>
-      </div>
-      <div class="faq-item"><button class="faq-q">Show Cons</button>
-        <div class="faq-a">
-          <ul class="cons">
-            <li>❌ Windows/Linux required for main app</li>
-            <li>❌ No Mac/iOS version (yet)</li>
-            <li>❌ You need your own Steam account with licenses</li>
-            <li>❌ Some DRM-protected games may have extra steps to restore</li>
-            <li>❌ Delisted games availability depends on your Steam ownership</li>
-          </ul>
-        </div>
-      </div>
+      <div class="faq-item"><button class="faq-q">Show Pros</button><div class="faq-a"><ul class="pros">
+        <li>✔️ Huge library (75,000+ games, including delisted gems)</li>
+        <li>✔️ No region locks, play anywhere</li>
+        <li>✔️ Fast downloads via Valve's servers</li>
+        <li>✔️ Always up to date with 1 click</li>
+        <li>✔️ Steam Cloud support (saves & achievements stay intact)</li>
+        <li>✔️ Revives classics and lost titles</li>
+        <li>✔️ Multi-platform (Windows, Steam Deck, ROG Ally, etc.)</li>
+        <li>✔️ Mobile companion app + upcoming Chrome extension</li>
+        <li>✔️ Easy, no account needed</li>
+        <li>✔️ One-time price, no subscriptions</li>
+      </ul></div></div>
+      <div class="faq-item"><button class="faq-q">Show Cons</button><div class="faq-a"><ul class="cons">
+        <li>❌ Windows/Linux required for main app</li>
+        <li>❌ No Mac/iOS version (yet)</li>
+        <li>❌ You need your own Steam account with licenses</li>
+        <li>❌ Some DRM-protected games may have extra steps to restore</li>
+        <li>❌ Delisted games availability depends on your Steam ownership</li>
+      </ul></div></div>
     </div>
   </div>
 </div>
 
-<!-- Gliding Gallery (unchanged from your original) -->
-<div class="glide-row"><div class="glide-track" id="track1"><img src="1st.jpg" class="glide-img" alt="Collage"><img src="1st.jpg" class="glide-img" alt="Collage"></div></div>
-<div class="glide-row"><div class="glide-track" id="track2"><img src="2nd.jpg" class="glide-img" alt="Strip"><img src="2nd.jpg" class="glide-img" alt="Strip"></div></div>
-<div class="glide-row"><div class="glide-track" id="track3"><img src="2025-07-31 13_27_07-GeForce NOW _ The Next Generation in Cloud Gaming _ NVIDIA.png" class="glide-img" alt="Promo"><img src="2025-07-31 13_27_07-GeForce NOW _ The Next Generation in Cloud Gaming _ NVIDIA.png" class="glide-img" alt="Promo"></div></div>
-
 <script>
-  // Triple video random: left/center/right
+  // HERO triple video random
   const BG_VIDS=["bg1.mp4","bg2.mp4","bg3.mp4"];
   function shuffle(arr){for(let i=arr.length-1;i>0;i--){let j=Math.floor(Math.random()*(i+1));[arr[i],arr[j]]=[arr[j],arr[i]];}}
   shuffle(BG_VIDS);
   const vids=document.querySelectorAll('.hero-vid');
   vids[0].src=BG_VIDS[0];vids[1].src=BG_VIDS[1];vids[2].src=BG_VIDS[2];
 
-  // ZOOM & SCROLL ANIMATION
-  let zoomedIn=true;
+  // ZOOM/SCROLL ANIMATION glide ad appears after hero
+  let zoomedIn=true,glideShown=false;
   const hero=document.getElementById('triple-hero-bg');
-  function heroZoom(){let y=window.scrollY,limit=window.innerHeight/1.2;
-    if(y<limit/2){if(!zoomedIn){hero.classList.add('zoom-hero');hero.classList.remove('scrolled-hero');zoomedIn=true;}}
-    else{if(zoomedIn){hero.classList.remove('zoom-hero');hero.classList.add('scrolled-hero');zoomedIn=false;}}
+  const glideSection=document.getElementById('glideAdSection');
+  function heroZoom(){
+    let y=window.scrollY,limit=window.innerHeight/1.2;
+    if(y<limit/2){
+      if(!zoomedIn){hero.classList.add('zoom-hero');hero.classList.remove('scrolled-hero');zoomedIn=true;}
+      if(glideShown){glideSection.classList.remove('visible');glideShown=false;}
+    }else{
+      if(zoomedIn){hero.classList.remove('zoom-hero');hero.classList.add('scrolled-hero');zoomedIn=false;}
+      if(!glideShown){glideSection.classList.add('visible');glideShown=true;}
+    }
   }
   hero.classList.add('zoom-hero');
   window.addEventListener('scroll',heroZoom);
 
-  // Collapsible logic FAQ/Pros/Cons
-  document.querySelectorAll('.faq-q').forEach(btn => {
-    btn.addEventListener('click', function() {
-      const item = this.parentElement;
-      item.classList.toggle('show');
-      document.querySelectorAll('.faq-item').forEach(other => {
-        if (other !== item) other.classList.remove('show');
-      });
-    });
+  // Glider logic
+  function makeGlide(trackId, pxPerFrame, direction) {
+    const track = document.getElementById(trackId);
+    let x=0;
+    const imgs = track.getElementsByTagName('img');
+    function anim(){
+      x += pxPerFrame * direction;
+      const totalWidth = imgs[0].offsetWidth + 14;
+      if(direction<0 && -x>=totalWidth)x+=totalWidth;
+      if(direction>0 && x>=totalWidth)x-=totalWidth;
+      track.style.transform=`translateX(${x}px)`;
+      requestAnimationFrame(anim);
+    }
+    anim();
+  }
+  window.addEventListener('DOMContentLoaded',()=>{
+    makeGlide('glider1', 0.15, -1); // slow left
+    makeGlide('glider2', 0.22, 1);  // medium right
+    makeGlide('glider3', 0.43, -1); // fast left
   });
 
-  // Glide effect
-  const speeds = [1.17, 0.71, 0.33];
-  function glideTrack(trackId, speed) {
-    const track = document.getElementById(trackId),imgs=track.getElementsByTagName('img');
-    let x = 0;
-    function animate() {
-      x -= speed;const imgWidth = imgs[0].offsetWidth + 24;
-      if(-x>=imgWidth)x+=imgWidth;track.style.transform=`translateX(${x}px)`;requestAnimationFrame(animate);
-    }
-    animate();
-  }
-  window.onload=()=>{glideTrack('track1',speeds[0]);glideTrack('track2',speeds[1]);glideTrack('track3',speeds[2]);};
+  // Collapsible FAQ/Pros/Cons
+  document.querySelectorAll('.faq-q').forEach(btn=>{
+    btn.addEventListener('click',function(){
+      const item=this.parentElement;
+      item.classList.toggle('show');
+      document.querySelectorAll('.faq-item').forEach(other=>{if(other!==item)other.classList.remove('show');});
+    });
+  });
 </script>
 </body>
 </html>
